# my-claude-squad

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
agents/: agent-framework-specialist.md  ai-orchestrator.md  airflow-specialist.md  automation-specialist.md  aws-specialist.md  container-specialist.md  documenter.md  git-commit-writer.md  kubernetes-specialist.md  llm-specialist.md  planner-orchestrator.md  plugin-architect.md  plugin-developer.md  python-developer.md  rag-specialist.md  snowflake-specialist.md  spark-specialist.md  sql-server-specialist.md  sql-specialist.md  squad-orchestrator.md
collaboration/: README.md  code-review-cycle.md  data-pipeline-build.md  full-stack-feature.md  migration-project.md
commands/ai-engineering/: create-agent.md  create-chatbot.md  create-mcp-server.md  create-rag.md  optimize-rag.md
commands/data-engineering/: analyze-data.md  create-pipeline.md  optimize-query.md
commands/devops/: containerize.md  deploy.md  k8s-manifest.md
commands/documentation/: commit.md  doc-api.md  doc-pipeline.md
commands/orchestration/: checkpoint.md  execute-squad.md  metrics.md  plan-task.md  status.md
commands/plugin-development/: add-tests.md  audit-plugin.md  improve-agent.md  improve-routing.md  list-agents.md  list-commands.md  new-agent.md  new-command.md  new-skill.md  plugin-status.md  test-agents.md  update-readme.md  validate-plugin.md
commands/research/: lookup-docs.md
docs/: agents.md  api-reference.md  architecture.md  developer-guide.md  installation.md
docs/tutorials/: quick-start.md
hooks/: README.md  pre-tool-use.sh  session-start.sh  stop.sh
orchestrator/: __init__.py  agent_registry.py  agent_state.py  aliases.py  command_tools.py  config.py  connection.py  coordinator.py  events.py  hooks.py  intents.py  memory.py  metrics.py  paths.py  retry.py  scheduler.py  semantic_memory.py  server.py  session.py  shortcuts.py  topology.py  tracing.py  types.py
scripts/: langfuse_hook.py  verify_mcp.py
skills/: README.md
skills/ai-engineering-patterns/: SKILL.md
skills/cloud-architecture/: SKILL.md
skills/code-review-standards/: SKILL.md
skills/data-pipeline-patterns/: SKILL.md
skills/documentation-templates/: SKILL.md
skills/plugin-development-patterns/: SKILL.md
skills/research-patterns/: SKILL.md
skills/self-improvement-patterns/: SKILL.md
tests/: __init__.py  conftest.py  test_agents.py  test_langfuse_hook.py
(+37 files in other folders)
