[project]
name = "my-claude-squad"
version = "0.1.0"
description = "Custom orchestration system for AI agent coordination"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.2",
    "duckdb>=1.4.3",
    "langfuse>=2.57.1",
    "python-dotenv>=1.0.0",
]

[project.scripts]
squad-mcp = "orchestrator.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "freezegun>=1.2.0",
]
semantic = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.26.0",
]
ann = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.26.0",
    "hnswlib>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]

# Note: agents/, skills/, commands/ are now served via MCP resources only
# They are not bundled in the wheel - the MCP server reads them from the project root

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = ["-v", "--tb=short", "-ra"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["orchestrator"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
